<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="nermux_ai_provider_category"
        app:title="@string/nermux_ai_provider_header">

        <Preference
            app:key="nermux_ai_setup_help"
            app:title="@string/nermux_ai_setup_title"
            app:summary="@string/nermux_ai_setup_summary"
            app:selectable="false" />

        <ListPreference
            app:key="provider"
            app:title="@string/nermux_ai_provider_title"
            app:entries="@array/nermux_ai_provider_entries"
            app:entryValues="@array/nermux_ai_provider_values"
            app:defaultValue="openai" />

        <EditTextPreference
            app:key="api_key"
            app:title="@string/nermux_ai_api_key_title"
            app:dialogTitle="@string/nermux_ai_api_key_title"
            app:dialogMessage="@string/nermux_ai_api_key_dialog_message"
            app:dialogLayout="@layout/nermux_preference_dialog_edittext" />

        <EditTextPreference
            app:key="model"
            app:title="@string/nermux_ai_model_title"
            app:dialogTitle="@string/nermux_ai_model_title"
            app:dialogMessage="@string/nermux_ai_model_dialog_message"
            app:dialogLayout="@layout/nermux_preference_dialog_edittext" />

        <EditTextPreference
            app:key="base_url"
            app:title="@string/nermux_ai_base_url_title"
            app:dialogTitle="@string/nermux_ai_base_url_title"
            app:dialogMessage="@string/nermux_ai_base_url_dialog_message"
            app:dialogLayout="@layout/nermux_preference_dialog_edittext" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="nermux_ai_agent_category"
        app:title="@string/nermux_ai_agent_header">

        <SwitchPreferenceCompat
            app:key="include_terminal_context"
            app:title="@string/nermux_ai_include_terminal_context_title"
            app:summary="@string/nermux_ai_include_terminal_context_summary"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="allow_run_commands"
            app:title="@string/nermux_ai_allow_run_commands_title"
            app:summary="@string/nermux_ai_allow_run_commands_summary"
            app:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>
